--- a/public/app.css
+++ b/public/app.css
@@ -17,4 +17,14 @@
   display: block;
 }
 
+.marker-labels {
+  color: red;
+  background-color: white;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  border: 1px solid black;
+  white-space: nowrap;
+}
 
